Giraph Change Log

Release 0.2.0 - unreleased
  GIRAPH-556: Race condition in EdgeStore (apresta)

  GIRAPH-528: Decouple vertex implementation from edge storage (apresta)

  GIRAPH-553: Cleanup HCatalogVertexOutputFormat (majakabiljo)

  GIRAPH-545: Improve Facebook Hadoop dependency (nitay)

  GIRAPH-541: Log before observers (nitay)

  GIRAPH-535: Range-partitioning and edge locality benchmark (apresta)

  GIRAPH-539: When having open requests log which workers are they sent to (majakabiljo)

  GIRAPH-530: GiraphInputFormat#getSplits() should be aware of multithreaded input (apresta)

  GIRAPH-532: Give an explanation when trying to use unregistered aggregators (majakabiljo)

  GIRAPH-453: Pure Hive I/O (nitay)

  GIRAPH-526: HiveGiraphRunner - bug with setting database name (majakabiljo)

  GIRAPH-518: Support Hadoop-2.0.3-alpha release on Giraph (ereisman)

  GIRAPH-525: Add PartitionClass to the ConfigurationUtils (claudio)

  GIRAPH-514: DiskBackedMessageStores should take advantage of machines with multiple disks (claudio)
  
  GIRAPH-520: ReverseEdgeDuplicator (nitay)

  GIRAPH-522: JMap Dumper (nitay)

  GIRAPH-517: Use stable hcatalog 0.5.0-incubating (nitay)

  GIRAPH-503: Refactor platform-independent CLI argument parsing in GiraphRunner into a separate class (ereisman)

  GIRAPH-519: EdgeFactory (nitay)

  GIRAPH-515: More efficient and flexible edge-based input (apresta)

  GIRAPH-516: out-of-core messages dies for ArrayIndexOutOfBoundsException when 
  running out-of-core messages in UnsafeByteArrayOutputStream (majakabiljo)

  GIRAPH-513: OnDiskPartitionStore should take advantage of multiple disks (claudio)

  GIRAPH-511: DNS interface and nameserver for multi-interface machines (claudio)

  GIRAPH-470 (tavoaqp via nitay)

  GIRAPH-504: Create PartitionContext (majakabiljo)

  GIRAPH-499: Giraph should not reserve minimum reduce slot memory 1024 since we never use it (ereisman)
